# ppbl2024-plutus-examples

./: README.md  cabal.project  ppbl2024-plutus-examples.cabal
V3/: .gitignore  CHANGELOG.md  CODEOWNERS.md  CONTRIBUTING.md  DESCRIPTION.md  README.md  cardano-plinth-examples.cabal  generate-blueprints.sh
V3/app/: GenAlwaysSucceedsValidatorBlueprint.hs  GenFaucetValidatorBlueprint.hs  GenOneShotMintingPolicyBlueprint.hs  GenSecretNumberMintingPolicyBlueprint.hs
V3/off-chain/: always-succeeds-validator-blueprint.json  faucet-validator-blueprint.json  one-shot-minting-policy-blueprint.json  secret-number-minting-policy-blueprint.json  secret-number-policy-blueprint.json
V3/src/: AlwaysSucceedsValidator.hs  FaucetValidator.hs  OneShotMintingPolicy.hs  SecretNumberMintingPolicy.hs
V3/test/: README.md  always.test.ts  faucet.test.ts  offchain.ts  package-lock.json  package.json  secret.test.ts  tsconfig.json
output/: my-faucet-script.addr  my-faucet-script.plutus  ppbl-contrib-token-validator.addr  ppbl-contrib-token-validator.plutus
src/ContributorToken/: Compiler.hs  Types.hs  Validator.hs
src/Faucet/: Compiler.hs  Types.hs  Validator.hs
src/Minting/: SecretNumberPolicy.hs
src/PPBL/: AlwaysSucceeds.hs  Compiler.hs
