cabal-version:      2.4
name:               ppbl2024-plutus-examples
version:            1.0.0
description:        plutus examples
author:             gimbalabs team
maintainer:         https://www.gimbalabs.com/

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False
--
common base
  build-depends: base >= 4.14 && < 4.15

common common-all
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wpartial-fields
                        -Wmissing-deriving-strategies
                        -Wunused-packages
  build-depends:       aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , plutus-core
                    , tagged
                    , prettyprinter
                    , cardano-api
                    , base
                    , cardano-crypto-class
                    , cardano-ledger-core
                    , split
                    , directory
                    , filepath
                    , plutus-script-utils
                    , plutonomy
                    , mtl
                    , plutus-ledger
                    , openapi3



  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
  import:               common-all, base

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:
                        PPBL.AlwaysSucceeds
                        Faucet.Compiler
                        Faucet.Types
                        Faucet.Validator
                        ContributorToken.Types
                        ContributorToken.Validator
