cabal-version:   3.0
name:            cardano-plinth-examples
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options: -Wall
  default-language: Haskell2010

library scripts
  import:         options
  hs-source-dirs: src
  exposed-modules:
    AlwaysSucceedsValidator
    FaucetValidator
    OneShotMintingPolicy
    SecretNumberMintingPolicy
  build-depends:
    , base
    , plutus-core ^>=1.40.0.0
    , plutus-ledger-api ^>=1.40.0.0
    , plutus-tx ^>=1.40.0.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin


executable gen-secret-number-minting-policy-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenSecretNumberMintingPolicyBlueprint.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core ^>=1.40.0.0
    , plutus-ledger-api ^>=1.40.0.0
    , plutus-tx ^>=1.40.0.0
    , plutus-tx-plugin ^>=1.40.0.0
    , scripts

executable gen-always-succeeds-validator-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenAlwaysSucceedsValidatorBlueprint.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core ^>=1.40.0.0
    , plutus-ledger-api ^>=1.40.0.0
    , plutus-tx ^>=1.40.0.0
    , plutus-tx-plugin ^>=1.40.0.0
    , scripts

executable gen-faucet-validator-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenFaucetValidatorBlueprint.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core ^>=1.40.0.0
    , plutus-ledger-api ^>=1.40.0.0
    , plutus-tx ^>=1.40.0.0
    , plutus-tx-plugin ^>=1.40.0.0
    , scripts

executable gen-one-shot-minting-policy-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenOneShotMintingPolicyBlueprint.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core ^>=1.40.0.0
    , plutus-ledger-api ^>=1.40.0.0
    , plutus-tx ^>=1.40.0.0
    , plutus-tx-plugin ^>=1.40.0.0
    , scripts
